[chore: 0.0.0] .|. Update server to any IP's

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,6 @@
 #REM: For dev and testing...
 LEARN_WEB_FRONTEND_PORT=3000
 LEARN_WEB_FRONTEND_API_PORT=8008
-LEARN_WEB_FRONTEND_API_HOST=localhost
+
+#REM: Replace it with the location (IP address) of where the database (API) is hosted.
+LEARN_WEB_FRONTEND_API_HOST=localhost 
