--- a/backend/package.json
+++ b/backend/package.json
@@ -17,16 +17,20 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.3",
         "cors": "^2.8.5",
         "express": "^4.21.1",
+        "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.11.4",
         "xmlbuilder": "^15.1.1"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
         "@types/body-parser": "^1.19.5",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^22.9.0",
         "dotenv": "^16.4.5",
         "ts-node": "^10.9.2",
