--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "chart.js": "^4.4.6",
         "chartjs-plugin-datalabels": "^2.2.0",
+        "jsonwebtoken": "^9.0.2",
         "react": "^18.3.1",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
@@ -19,6 +20,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.13.0",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^22.9.0",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
